# findsource

./: Cargo.toml  LICENSE  README.md  build.rs  config.json
.github/workflows/: release.yml
config/: c.json  cfg.json  cpp.json  make.json  rs.json  unity.json
nsi/: find-source.nsi
shell/: fs.fish  fs.sh  fs.zsh
src/: config.rs  finder.rs  json.rs  macro.rs  main.rs
