[package]
name = "findsource"
version = "0.0.5"
edition = "2021"
authors = [ "araraloren <blackcatoverwall@gmail.com>" ]
description = "Simple configurable tool find source file with extension."
repository = "https://github.com/araraloren/findsource"
license = "MPL-2.0"
keywords = ["aopt", "app", "extension", "find"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fs"
path = "src/main.rs"

[dependencies]
ustr = { version = "0.8.1", features = [ "serialization"]}
aopt = { version = "0.6.2", features = [ "sync" ] }
aopt-macro = { version = "0.1.0" }
aopt-help = "0.2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.79" }
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
color-eyre = "0.5.11"
async-std = { version = "1.10.0", features = ["std", "attributes"] }
atty = "0.2.14"