[package]
name = "findsource"
version = "0.1.4"
edition = "2021"
authors = [ "araraloren <blackcatoverwall@gmail.com>" ]
description = "Simple configurable tool for searching source files by extensions easily!"
repository = "https://github.com/araraloren/findsource"
license = "MPL-2.0"
keywords = ["aopt", "app", "extension", "find"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fs"
path = "src/main.rs"

[dependencies]
cote = { version = "0.2", features = [ "sync" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.79" }
color-eyre = "0.5.11"
tokio = { version = "1.23", features = ["full"] }
atty = "0.2.14"
dunce = "1.0"